2007-10-14 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_scrolled.c, src/gimv_slideshow.c, src/gimv_thumb_view.c,
	  src/gimv_thumb_win.c, src/gimv_zlist.c, src/gtk_prop.c,
	  src/gtkutils.c, src/help.c, src/image_view_draw.c, src/menu.c,
	  src/thumbnail_view_album.c, src/text_viewer.c,
	  src/prefs_ui/prefs_ui_common.c, src/prefs_ui/prefs_ui_etc.c,
	  src/prefs_ui/prefs_ui_imagewin.c, src/prefs_ui/prefs_ui_progs.c,
	  src/prefs_ui/prefs_ui_thumbwin.c, src/prefs_ui/prefs_ui_thumbalbum.c:
	gtk_signal -> g_signal.

2007-10-14 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_prefs.[ch]: Temporary remove. I'll reimplement it by using GKeyFile.
	* src/Makefile.am: Follow the change.
	* src/gimv_nav_win.c, src/gimv_prefs_ui_utils.c, src/gimv_prefs_win.c:
	gtk_signal -> g_signal.

2007-10-14 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_saver.c, src/gimv_image_view.c, src/gimv_image_win.c:
	gtk_signal -> g_signal

2007-10-14 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_comment.c, src/gimv_comment_view.c, src/gimv_dlist.c,
	  src/gimv_dupl_finder.c, src/gimv_dupl_win.c, src/gimv_image_loader.c,
	  srg/gimv_elist.c: gtk_signal -> g_signal

2007-10-14 Takuro Ashie <ashie@homa.ne.jp>

	* src/auto_completion.c, src/exif_view.c, src/fr-archive.c,
	  src/fr-command.c, src/fr-process.c, src/fileload.c:
	gtk_signal -> g_signal

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb_win.c: Don't show resize grip of status bar.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_loader.[ch]: GtkObject -> GObject
	* src/gimv_image.c, src/gimv_image_view.c, src/exif_view.c:
	Follow the change.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/thumbnail/konqueror-old.c, plugins/thumbnail/nautilus-2.0.c,
	  plugins/thumbnail/nautilus.c, plugins/thumbnail/konqueror.c,
	  plugins/thumbnail/ee.c: Removed obsolete cache types support.
	* plugins/thumbnail/Makefile.am: Follow the change.
	* src/pixmaps/gimageview.xpm: Changed to develop version.
