@@ -1,5 +1,13 @@
 2007-10-14 Takuro Ashie <ashie@homa.ne.jp>
 
+	* plugins/thumbnail/gqview.c, plugins/image_view/gimv_mplayer.c,
+	  plugins/image_view/image_view_mplayer.c,
+	  plugins/image_view/image_view_mplayer.c,
+	  plugins/image_view/prefs_mplayer.c,
+	  plugins/image_view/prefs_xine.c:
+	gtk_signal -> g_signal.
+2007-10-14 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_scrolled.c, src/gimv_slideshow.c, src/gimv_thumb_view.c,
 	  src/gimv_thumb_win.c, src/gimv_zlist.c, src/gtk_prop.c,
 	  src/gtkutils.c, src/help.c, src/image_view_draw.c, src/menu.c,
